# bsEngine

./: LICENSE  README.md
bsEngine/: .gitignore  CMakeLists.txt  notices (for myself lol).txt
bsEngine/shaders/: tri_mesh.vert
bsEngine/src/: CMakeLists.txt  bs_camera.cpp  bs_draw.cpp  bs_frametime.cpp  bs_load_shaders.cpp  bs_scene.cpp  bs_swapchain.cpp  main.cpp  main.h  main.hpp  mesh_loading.cpp  mouse_input.cpp  object_rendering.cpp  pipeline_builder.cpp  pipeline_builder.h  vk_commands.cpp  vk_engine.cpp  vk_engine.h  vk_engine.hpp  vk_initializers.cpp  vk_initializers.h  vk_initializers.hpp  vk_mesh.cpp  vk_mesh.h  vk_pipelines.cpp  vk_renderpass.cpp  vk_setup.cpp  vk_types.h  window.cpp  window.h  window.hpp
bsEngine/src/additions/: bs_frametime.cpp
bsEngine/src/base_engine/: bs_draw.cpp  bs_scene.cpp  object_rendering.cpp  vk_engine.cpp  vk_engine.h
bsEngine/src/io/: bs_camera.cpp  buffers.cpp  controller_input.cpp  controller_input.h  descriptors.cpp  frameinfo.cpp  mouse_input.cpp  mouse_input.h
bsEngine/src/resource_loading/: bs_load_shaders.cpp  bs_scene.cpp  mesh_loading.cpp  vk_mesh.cpp  vk_mesh.h
bsEngine/src/setup/: bs_swapchain.cpp  pipeline_builder.h  vk_commands.cpp  vk_initializers.cpp  vk_pipelines.cpp  vk_renderpass.cpp  vk_setup.cpp  vk_types.h
bsEngine/src/windowing/: window.cpp
